修正 畫面高度

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -137,12 +137,12 @@ tt {
 	::-webkit-scrollbar {
 		width: 6px;
 		height: 6px;
-		background-color: map-get($bg_color, primary);
+		background-color: map-get($bg_color, secondary02);
 	}
 
 	::-webkit-scrollbar-thumb {
 		background-color: map-get($bg_color, white_alpha);
-		border: 1px map-get($bg_color, primary) solid;
+		border: 1px map-get($bg_color, secondary02) solid;
 		border-radius: 3px;
 		cursor: pointer;
 		-webkit-transition: background .5s linear;
@@ -150,10 +150,10 @@ tt {
 	}
 
 	*:hover::-webkit-scrollbar-thumb {
-		background-color: map-get($bg_color, secondary);
+		background-color: map-get($bg_color, white_alpha);
 	}
 
 	::-webkit-scrollbar-corner {
-		background-color: map-get($bg_color, secondary);
+		background-color: map-get($bg_color, white_alpha);
 	}
 }
